# baselkit

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.spdx  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/core/: index.html
api/ecl/: index.html
api/models/: index.html
api/portfolio/: index.html
api/rwa/: index.html
api/validation/: index.html
architecture/: index.html
benchmarks/: bench_portfolio.py
changelog/: index.html
configs/: example_portfolio.yml  example_run.yml
docs/: architecture.md  getting_started.md  index.md  regulatory_disclaimers.md  regulatory_mapping.md  regulatory_versioning.md
docs/api/: core.md  ecl.md  models.md  portfolio.md  rwa.md  validation.md
docs/guide/: ecl.md  irb.md  sa.md  stress.md  validation.md
examples/: 01_basic_rwa_calculation.py  02_irb_corporate_portfolio.py  03_ifrs9_ecl_pipeline.py  04_scorecard_development.py  05_model_validation.py  06_multi_jurisdiction.py
getting_started/: index.html
guide/ecl/: index.html
guide/irb/: index.html
guide/sa/: index.html
guide/stress/: index.html
guide/validation/: index.html
regulatory_disclaimers/: index.html
regulatory_mapping/: index.html
regulatory_versioning/: index.html
search/: search_index.json
src/creditriskengine/: __init__.py
src/creditriskengine/ccr/: __init__.py  exposure.py  sa_ccr.py  wwr.py
src/creditriskengine/climate/: __init__.py  crypto.py  financed_emissions.py  green_asset_ratio.py  ngfs_scenarios.py  physical_risk.py  scenario_analysis.py  (+1 more)
tests/: conftest.py  test_gaps.py  test_integration.py
tests/test_ccr/: test_ccr.py  test_sa_ccr.py
tests/test_climate/: test_climate.py  test_scenario_analysis.py
tests/test_core/: test_audit.py  test_logging_config.py  test_models.py
tests/test_ecl/: test_cecl.py  test_ifrs9_ecl.py  test_ind_as109.py  test_ind_as_2026.py  test_lifetime_pd.py  test_overlays.py  test_rbi_2025_directions.py  test_rbi_2026_robustness.py  test_revolving.py  test_scenario_governance.py  test_scenarios.py  test_staging.py  test_ttc_pit_fli.py
tests/test_emerging/: test_brazil.py  test_emerging.py
tests/test_esg/: test_esg.py  test_risk_management.py
tests/test_irrbb/: test_frtb_ima.py  test_irrbb.py  test_shocks.py
tests/test_liquidity/: test_lcr.py  test_nsfr.py
tests/test_models_advanced/: test_ldp_cds_behavioural.py  test_lgd_retail.py  test_survival.py
tests/test_operational_resilience/: test_operational_resilience.py
tests/test_pd_lgd_ead/: test_binning.py  test_concentration.py  test_cure_rate.py  test_ead_model.py  test_lgd_model.py  test_margin_of_conservatism.py  test_pd_scorecard.py  test_pd_term_structure.py  test_structural.py  test_transition_matrix.py  test_zscore.py
tests/test_portfolio/: test_copula.py  test_reverse_stress.py  test_risk_utils.py  test_stress_testing.py  test_var.py  test_vasicek.py
tests/test_pricing/: test_pricing.py
tests/test_regulatory/: test_config_corrections.py  test_loader.py  test_schema.py
tests/test_reporting/: test_corep.py  test_fr2052a.py  test_fr_y14.py  test_model_doc.py  test_pillar3.py  test_reports.py
tests/test_rwa/: test_advanced_irb.py  test_asset_classes.py  test_base.py  test_capital_buffers.py  test_correlation.py  test_cre.py  test_credit_risk_sa.py  test_crm.py  test_cross_validation.py  test_crr3_sa_drivers.py  test_cva.py  test_double_default.py  test_equity_in_funds.py  test_foundation_irb.py  test_irb_formulas.py  test_jurisdictions.py  test_large_exposures.py  test_leverage_ratio.py  test_market_risk.py  test_maturity.py  test_mrel.py  test_operational_risk.py  test_output_floor.py  test_regulatory_backtesting.py  test_risk_weights.py  test_sa_extended.py  test_securitisation.py  test_settlement_risk.py  test_sft_haircut_floors.py  test_slotting.py  test_tlac.py  test_us_erba.py
tests/test_validation/: test_backtesting.py  test_benchmarking.py  test_calibration.py  test_discrimination.py  test_reporting.py  test_stability.py
tests/test_validation_ai/: test_ai_governance.py
(+185 files in other folders)
